# nemovcs

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
data/nemo/actions/: nemovcs-about.nemo_action  nemovcs-background-about.nemo_action  nemovcs-background-clone.nemo_action  nemovcs-background-push.nemo_action  nemovcs-background-settings.nemo_action  nemovcs-background-status.nemo_action  nemovcs-background-svn-about.nemo_action  nemovcs-background-svn-checkout.nemo_action  nemovcs-background-svn-settings.nemo_action  nemovcs-background-svn-status.nemo_action  nemovcs-background-svn-update.nemo_action  nemovcs-background-update.nemo_action  nemovcs-clone.nemo_action  nemovcs-commit.nemo_action  nemovcs-diff.nemo_action  nemovcs-log.nemo_action  (+16 more)
scripts/: install-actions.sh  install-layout.py  install-nemo-extension.py  install-nemo-extension.sh  install-statusd-service.py  install-statusd-service.sh  uninstall.py  uninstall.sh
spec/: nemovcs_spec-v1.md  session-notes.md
src/nemovcs/: __init__.py  cli.py  config.py  git.py  nemo_plugin.py  status_client.py  statusd.py  statusd_dbus.py  statusd_monitor.py
tests/: test_actions.py  test_backends.py  test_change_request_dialog.py  test_cli.py  test_clone_dialog.py  test_commit_dialog.py  test_config.py  test_forge.py  test_git.py  test_icon_resources.py  test_info_dialog.py  test_install_layout.py  test_install_nemo_extension.py  test_install_statusd_service.py  test_log_dialog.py  test_logger.py  test_nemo_plugin.py  test_publish_dialog.py  test_rename_dialog.py  test_revert_dialog.py  test_settings_dialog.py  test_stage_dialog.py  test_status_client.py  test_status_dialog.py  test_statusd.py  test_statusd_dbus.py  test_statusd_monitor.py  test_uninstall.py
(+23 files in other folders)
